Completed first task of task-6 and also completed second part of it unknowingly